crates/css_ast/tests/snapshots/basic_snapshots__basic_media.snap
---
source: crates/css_ast/tests/basic_snapshots.rs
expression: result.output.unwrap()
---
StyleSheet(
  rules: [
    MediaRule(
      name: AtKeyword(Cursor(
        kind: "AtKeyword",
        offset: SourceOffset(0),
        len: 6,
      )),
      prelude: MediaQueryList([
        (MediaQuery(
          precondition: None,
          media_type: Some(Screen(Ident(Cursor(
            kind: "Ident",
            offset: SourceOffset(7),
            len: 6,
          )))),
          and: None,
          condition: None,
        ), None),
      ]),
      block: MediaRuleBlock(Block(
        open_curly: LeftCurly(Cursor(
          kind: "LeftCurly",
          offset: SourceOffset(14),
          len: 1,
        )),
        declarations: [],
        rules: [
          StyleRule(
            rule: QualifiedRule(
              prelude: SelectorList([
                (CompoundSelector([
                  Tag(Html(Body(Ident(Cursor(
                    kind: "Ident",
                    offset: SourceOffset(17),
                    len: 4,
                  ))))),
                ]), None),
              ]),
              block: Block(
                open_curly: LeftCurly(Cursor(
                  kind: "LeftCurly",
                  offset: SourceOffset(22),
                  len: 1,
                )),
                declarations: [
                  Declaration(
                    name: Ident(Cursor(
                      kind: "Ident",
                      offset: SourceOffset(26),
                      len: 5,
                    )),
                    colon: Colon(Cursor(
                      kind: "Colon",
                      offset: SourceOffset(31),
                      len: 1,
                    )),
                    value: ColorStyleValue(Literal(Named(Black(Ident(Cursor(
                      kind: "Ident",
                      offset: SourceOffset(33),
                      len: 5,
                    )))))),
                    important: None,
                    semicolon: Some(Semicolon(Cursor(
                      kind: "Semicolon",
                      offset: SourceOffset(38),
                      len: 1,
                    ))),
                  ),
                ],
                rules: [],
                close_curly: Some(RightCurly(Cursor(
                  kind: "RightCurly",
                  offset: SourceOffset(41),
                  len: 1,
                ))),
              ),
            ),
          ),
        ],
        close_curly: Some(RightCurly(Cursor(
          kind: "RightCurly",
          offset: SourceOffset(43),
          len: 1,
        ))),
      )),
    ),
  ],
)
