crates/css_ast/tests/snapshots/basic_snapshots__basic_nth.snap
---
source: crates/css_ast/tests/basic_snapshots.rs
expression: result.output.unwrap()
---
{
  "type": "stylesheet",
  "rules": [
    {
      "type": "QualifiedRule",
      "prelude": [
        [
          [
            {
              "type": "functional-pseudo-class",
              "value": {
                "type": "nth-child",
                "value": {
                  "colon": {
                    "kind": "Colon",
                    "offset": 0,
                    "len": 1
                  },
                  "function": {
                    "kind": "Function",
                    "offset": 1,
                    "len": 10
                  },
                  "value": {
                    "Anb": [
                      1,
                      1,
                      [
                        {
                          "kind": "Ident",
                          "offset": 11,
                          "len": 1
                        },
                        null,
                        null,
                        {
                          "kind": "Number",
                          "offset": 12,
                          "len": 2
                        }
                      ]
                    ]
                  },
                  "close": {
                    "kind": "RightParen",
                    "offset": 14,
                    "len": 1
                  }
                }
              }
            }
          ],
          null
        ]
      ],
      "block": {
        "open_curly": {
          "kind": "LeftCurly",
          "offset": 16,
          "len": 1
        },
        "declarations": [],
        "rules": [],
        "close_curly": {
          "kind": "RightCurly",
          "offset": 17,
          "len": 1
        }
      }
    }
  ]
}
