crates/css_ast/tests/snapshots/basic_snapshots__basic_vars.snap
---
source: crates/css_ast/tests/basic_snapshots.rs
expression: result.output.unwrap()
---
StyleSheet(
  rules: [
    StyleRule(
      rule: QualifiedRule(
        prelude: SelectorList([
          (CompoundSelector([
            Tag(Html(Hr(Ident(Cursor(
              kind: "Ident",
              offset: SourceOffset(0),
              len: 2,
            ))))),
          ]), None),
        ]),
        block: Block(
          open_curly: LeftCurly(Cursor(
            kind: "LeftCurly",
            offset: SourceOffset(3),
            len: 1,
          )),
          declarations: [
            Declaration(
              name: Ident(Cursor(
                kind: "Ident",
                offset: SourceOffset(7),
                len: 10,
              )),
              colon: Colon(Cursor(
                kind: "Colon",
                offset: SourceOffset(17),
                len: 1,
              )),
              value: Computed(ComponentValues(
                values: [
                  Whitespace(Cursor(
                    kind: "Whitespace",
                    offset: SourceOffset(18),
                    len: 1,
                  )),
                  FunctionBlock(
                    name: Function(Cursor(
                      kind: "Function",
                      offset: SourceOffset(19),
                      len: 16,
                    )),
                    params: ComponentValues(
                      values: [
                        Ident(Cursor(
                          kind: "Ident",
                          offset: SourceOffset(35),
                          len: 2,
                        )),
                        Whitespace(Cursor(
                          kind: "Whitespace",
                          offset: SourceOffset(37),
                          len: 1,
                        )),
                        Ident(Cursor(
                          kind: "Ident",
                          offset: SourceOffset(38),
                          len: 5,
                        )),
                        Comma(Cursor(
                          kind: "Comma",
                          offset: SourceOffset(43),
                          len: 1,
                        )),
                        Whitespace(Cursor(
                          kind: "Whitespace",
                          offset: SourceOffset(44),
                          len: 1,
                        )),
                        Ident(Cursor(
                          kind: "Ident",
                          offset: SourceOffset(45),
                          len: 11,
                        )),
                        Comma(Cursor(
                          kind: "Comma",
                          offset: SourceOffset(56),
                          len: 1,
                        )),
                        Whitespace(Cursor(
                          kind: "Whitespace",
                          offset: SourceOffset(57),
                          len: 1,
                        )),
                        FunctionBlock(
                          name: Function(Cursor(
                            kind: "Function",
                            offset: SourceOffset(58),
                            len: 4,
                          )),
                          params: ComponentValues(
                            values: [
                              Ident(Cursor(
                                kind: "Ident",
                                offset: SourceOffset(62),
                                len: 14,
                              )),
                            ],
                          ),
                          close: RightParen(Cursor(
                            kind: "RightParen",
                            offset: SourceOffset(76),
                            len: 1,
                          )),
                        ),
                        Whitespace(Cursor(
                          kind: "Whitespace",
                          offset: SourceOffset(77),
                          len: 1,
                        )),
                        Dimension(Cursor(
                          kind: "Dimension",
                          offset: SourceOffset(78),
                          len: 3,
                        )),
                        Comma(Cursor(
                          kind: "Comma",
                          offset: SourceOffset(81),
                          len: 1,
                        )),
                        Whitespace(Cursor(
                          kind: "Whitespace",
                          offset: SourceOffset(82),
                          len: 1,
                        )),
                        FunctionBlock(
                          name: Function(Cursor(
                            kind: "Function",
                            offset: SourceOffset(83),
                            len: 4,
                          )),
                          params: ComponentValues(
                            values: [
                              Ident(Cursor(
                                kind: "Ident",
                                offset: SourceOffset(87),
                                len: 14,
                              )),
                            ],
                          ),
                          close: RightParen(Cursor(
                            kind: "RightParen",
                            offset: SourceOffset(101),
                            len: 1,
                          )),
                        ),
                        Whitespace(Cursor(
                          kind: "Whitespace",
                          offset: SourceOffset(102),
                          len: 1,
                        )),
                        Dimension(Cursor(
                          kind: "Dimension",
                          offset: SourceOffset(103),
                          len: 3,
                        )),
                        Comma(Cursor(
                          kind: "Comma",
                          offset: SourceOffset(106),
                          len: 1,
                        )),
                        Whitespace(Cursor(
                          kind: "Whitespace",
                          offset: SourceOffset(107),
                          len: 1,
                        )),
                        Ident(Cursor(
                          kind: "Ident",
                          offset: SourceOffset(108),
                          len: 11,
                        )),
                      ],
                    ),
                    close: RightParen(Cursor(
                      kind: "RightParen",
                      offset: SourceOffset(119),
                      len: 1,
                    )),
                  ),
                ],
              )),
              important: None,
              semicolon: Some(Semicolon(Cursor(
                kind: "Semicolon",
                offset: SourceOffset(120),
                len: 1,
              ))),
            ),
          ],
          rules: [],
          close_curly: Some(RightCurly(Cursor(
            kind: "RightCurly",
            offset: SourceOffset(122),
            len: 1,
          ))),
        ),
      ),
    ),
  ],
)
